--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,15 +3,7 @@
 
   <hr>
 
-  <div class="row g-3">
-    @for (pokemon of pokemons; track pokemon.nome) {
-      <div class="col-md-4">
-        <div class="card text-center">
-          <h5 class="card-title">{{ pokemon.nome }}</h5>
+  <router-outlet></router-outlet>
 
-          <img [src]="pokemon.urlSprite" [alt]="pokemon.nome" />
-        </div>
-      </div>
-    }
-  </div>
+
 </main>
