--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,9 @@
-<main class="container my-3 px-5">
-  <h1 class="text-primary my-3">Pokédex v0.0.1</h1>
+<main class="container my-3">
+  <a class="text-decoration-none" routerLink="/pokemons">
+    <h1 class="text-primary my-3">Pokédex v0.0.1</h1>
+  </a>
 
   <hr>
 
   <router-outlet></router-outlet>
-
-
 </main>
