--- a/src/app/components/listagem-pokemons/listagem-pokemons.html
+++ b/src/app/components/listagem-pokemons/listagem-pokemons.html
@@ -1,11 +1,22 @@
+<h2>Listagem de Pokémons</h2>
+
+<hr>
+
 <div class="row g-3">
     @for (pokemon of pokemons; track pokemon.nome) {
         <div class="col-md-3">
-            <div class="card p-3 text-center">
-                <h5 class="card-title">{{ pokemon.nome }}</h5>
-
-                <img class="img-fluid" [src]="pokemon.urlSprite" [alt]="pokemon.nome" />
-            </div>
+            <a class="text-decoration-none" [routerLink]="['/pokemons', pokemon.id]">
+                <div class="card p-3 text-center">
+                    <h5 class="card-title">{{ pokemon.nome }}</h5>
+                    <img class="img-fluid" [src]="pokemon.urlSprite" [alt]="pokemon.nome" />
+                        
+                    <div class="d-flex justify-content-center align-items-center gap-2">
+                        @for (tipo of pokemon.tipos; track $index) {
+                            <span class="badge rounded-pill text-light fs-6" [ngClass]="mapeamentoDeCores[tipo]">{{tipo}}</span>
+                        }
+                    </div>
+                </div>
+            </a>
         </div>
     }
 </div>
