--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,13 +1,19 @@
-<main class="container my-3 px-5">
+<main class="container my-3">
   <h1 class="text-primary my-3">Pokédex v0.0.1</h1>
 
   <hr>
 
   <div class="row g-3">
     @for (pokemon of pokemons; track pokemon.nome) {
-      <div class="col-md-4">
-        <div class="card text-center">
+      <div class="col-md-3">
+        <div class="card p-3 text-center">
           <h5 class="card-title">{{ pokemon.nome }}</h5>
+
+          <div class="d-flex justify-content-center gap-2">
+              @for (tipo of pokemon.tipos; track $index) {
+                <span class="badge rounded-pill text-light fs-6" [ngClass]="mapeamentoDeCoresPorTipo[tipo]">{{tipo}}</span>
+              }
+          </div>
 
           <img [src]="pokemon.urlSprite" [alt]="pokemon.nome" />
         </div>
