Adicionado roteamento com RouterOutlet

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,6 +2,5 @@
   <h1 class="text-primary my-3">Pokédex v0.0.1</h1>
 
   <hr>
-
-  <app-listagem-pokemons></app-listagem-pokemons>
+  <router-outlet></router-outlet>
 </main>
