Implementado componente de Detalhes do Pokémon

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,5 @@
 <main class="container my-3">
-  <h1 class="text-primary my-3">Pokédex v0.0.1</h1>
+  <a class="text-decoration-none" routerLink="/pokemons"><h2 class="text-primary my-3">Pokédex v0.0.1</h2></a>
 
   <hr>
   <router-outlet></router-outlet>
