--- a/src/app/components/listagem-pokemons/listagem-pokemons.html
+++ b/src/app/components/listagem-pokemons/listagem-pokemons.html
@@ -5,9 +5,11 @@
 <div class="row g-3">
   @for (pokemon of pokemons; track pokemon.nome) {
   <div class="col-md-3">
-    <a class="text-decoration-none" [routerLink]="['/pokemons', pokemon.id]">
-      <app-card-pokemon [pokemon]="pokemon"></app-card-pokemon>
-    </a>
+    <app-card-pokemon
+      [pokemon]="pokemon"
+      [exibirLink]="true"
+      (statusFavoritoAlterado)="alternarStatusPokemonFavorito($event)"
+    ></app-card-pokemon>
   </div>
   }
 </div>
