--- a/src/app/components/listagem-pokemons/listagem-pokemons.html
+++ b/src/app/components/listagem-pokemons/listagem-pokemons.html
@@ -1,23 +1,11 @@
 <h2>Listagem de Pokémons</h2>
 
-<hr>
+<hr />
 
 <div class="row g-3">
-    @for (pokemon of pokemons; track pokemon.nome) {
-      <div class="col-md-3">
-        <a class="text-decoration-none" [routerLink]="['/pokemons', pokemon.id]">
-            <div class="card p-3 text-center">
-                <h5 class="card-title">{{ pokemon.nome }}</h5>
-
-                <div class="d-flex justify-content-center gap-2">
-                    @for (tipo of pokemon.tipos; track $index) {
-                        <span class="badge rounded-pill text-light fs-6" [ngClass]="mapeamentoDeCoresPorTipo[tipo]">{{tipo}}</span>
-                    }
-                </div>
-
-                <img [src]="pokemon.urlSprite" [alt]="pokemon.nome" />
-            </div>
-        </a>
-      </div>
-    }
+  @for (pokemon of pokemons; track pokemon.nome) {
+  <div class="col-md-3">
+    <app-card-pokemon [pokemon]="pokemon" [exibirLink]="true"></app-card-pokemon>
   </div>
+  }
+</div>
