Adicionados outputs e pokémons favoritos

--- a/src/app/components/listagem-pokemons/listagem-pokemons.html
+++ b/src/app/components/listagem-pokemons/listagem-pokemons.html
@@ -2,10 +2,28 @@
 
 <hr />
 
+<div class="row g-2 my-3">
+  @for (pokemon of pokemonsFavoritos; track pokemon.nome) {
+  <div class="col-md-1">
+    <a [routerLink]="['pokemons', pokemon.id]">
+      <div class="card">
+        <div class="card-body text-center">
+          <img class="img-fluid" [src]="pokemon.urlSprite" [alt]="pokemon.nome" />
+        </div>
+      </div>
+    </a>
+  </div>
+  }
+</div>
+
 <div class="row g-3">
   @for (pokemon of pokemons; track pokemon.nome) {
   <div class="col-md-3">
-    <app-card-pokemon [pokemon]="pokemon" [exibirLink]="true"></app-card-pokemon>
+    <app-card-pokemon
+      [pokemon]="pokemon"
+      [exibirLink]="true"
+      (statusFavoritoAlterado)="alternarStatusPokemon($event)"
+    ></app-card-pokemon>
   </div>
   }
 </div>
