Corrigido problema de atualização da listagem ao remover pokemon dos favoritos

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,7 @@
 <main class="container my-3">
-  <a class="text-decoration-none" routerLink="/pokemons"><h2 class="text-primary my-3">Pokédex v0.0.2</h2></a>
-
-  <hr>
+  <a class="text-decoration-none" routerLink="/pokemons"
+    ><h2 class="text-primary my-3">Pokédex v0.0.3</h2></a
+  >
+  <hr />
   <router-outlet></router-outlet>
 </main>
