--- a/src/app/components/listagem-pokemons/listagem-pokemons.html
+++ b/src/app/components/listagem-pokemons/listagem-pokemons.html
@@ -2,7 +2,7 @@
 
 <hr />
 
-<div class="row g-2 mt-3">
+<div class="row justify-content-center g-2 mt-3">
   @for (pokemon of pokemonsFavoritos; track pokemon.nome) {
   <div class="col-3 col-md-1">
     <a [routerLink]="['/pokemons', pokemon.id]" [title]="pokemon.nome">
