Movido botão de alternar status de favorito, ativado dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,12 @@
 @use 'bootstrap';
 @use 'bootstrap-icons';
 
+.app-container-alternar-status {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 .fundo-tipo-normal {
   background-color: #cbcbcb;
 }
