--- a/src/app/components/listagem-pokemons/listagem-pokemons.html
+++ b/src/app/components/listagem-pokemons/listagem-pokemons.html
@@ -18,7 +18,7 @@
 
 <div class="row g-3 mt-3">
   @for (pokemon of pokemons; track pokemon.nome) {
-  <div class="col-md-3">
+  <div class="col-md-3" style="min-height: 200px">
     <app-card-pokemon
       [pokemon]="pokemon"
       [exibirLink]="true"
