--- a/src/app/components/detalhes-pokemon/detalhes-pokemon.html
+++ b/src/app/components/detalhes-pokemon/detalhes-pokemon.html
@@ -13,15 +13,18 @@
   <div class="col">
     <div class="d-grid">
       <div class="d-flex justify-content-between align-items-center">
-        <h2 class="mb-0">{{ detalhesDoPokemon?.nome }}</h2>
+        <div class="d-flex align-items-center gap-4">
+          <span class="text-secondary fs-2">#{{ detalhesDoPokemon?.id }}</span>
+          <h2 class="mb-0">{{ detalhesDoPokemon?.nome }}</h2>
+        </div>
 
         <div class="d-flex justify-content-center gap-2">
           @for (tipo of detalhesDoPokemon?.tipos; track $index) {
-          <span
-            class="badge rounded-pill text-light fs-6"
-            [ngClass]="mapeamentoDeCoresPorTipo[tipo]"
-            >{{ tipo }}</span
-          >
+            <span
+              class="badge rounded-pill text-light fs-6"
+              [ngClass]="mapeamentoDeCoresPorTipo[tipo]"
+              >{{ tipo }}</span
+            >
           }
         </div>
       </div>
@@ -33,13 +36,13 @@
 
         <div class="row g-3 mt-3">
           @for (sprite of detalhesDoPokemon?.sprites; track $index) {
-          <div class="col-2">
-            <div class="card h-100">
-              <div class="card-body">
-                <img class="img-fluid my-auto" style="max-height: 100px" [src]="sprite" />
+            <div class="col-2">
+              <div class="card h-100">
+                <div class="card-body">
+                  <img class="img-fluid my-auto" style="max-height: 100px" [src]="sprite" />
+                </div>
               </div>
             </div>
-          </div>
           }
         </div>
       </section>
@@ -59,22 +62,22 @@
             </thead>
 
             @if (detalhesDoPokemon) {
-            <tbody>
-              <tr>
-                <td>
-                  <audio controls class="mt-2" style="height: 40px; max-width: 180px">
-                    <source [src]="detalhesDoPokemon.sons.atual" type="audio/ogg" />
-                    Seu navegador não suporta o elemento audio.
-                  </audio>
-                </td>
-                <td>
-                  <audio controls class="mt-2" style="height: 40px; max-width: 180px">
-                    <source [src]="detalhesDoPokemon.sons.antigo" type="audio/ogg" />
-                    Seu navegador não suporta o elemento audio.
-                  </audio>
-                </td>
-              </tr>
-            </tbody>
+              <tbody>
+                <tr>
+                  <td>
+                    <audio controls class="mt-2" style="height: 40px; max-width: 180px">
+                      <source [src]="detalhesDoPokemon.sons.atual" type="audio/ogg" />
+                      Seu navegador não suporta o elemento audio.
+                    </audio>
+                  </td>
+                  <td>
+                    <audio controls class="mt-2" style="height: 40px; max-width: 180px">
+                      <source [src]="detalhesDoPokemon.sons.antigo" type="audio/ogg" />
+                      Seu navegador não suporta o elemento audio.
+                    </audio>
+                  </td>
+                </tr>
+              </tbody>
             }
           </table>
         </div>
