--- a/src/app/components/listagem-pokemons/listagem-pokemons.html
+++ b/src/app/components/listagem-pokemons/listagem-pokemons.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="row g-3 mt-3">
-  @for (pokemon of pokemons; track pokemon.nome) {
+  @for (pokemon of pokemons$ | async; track pokemon.nome) {
     <div class="col-md-3" style="min-height: 200px">
       <app-card-pokemon
         [pokemon]="pokemon"
