--- a/src/app/components/detalhes-pokemon/detalhes-pokemon.html
+++ b/src/app/components/detalhes-pokemon/detalhes-pokemon.html
@@ -7,7 +7,7 @@
     <div class="col-lg-4">
       <app-card-pokemon
         [pokemon]="detalhesDoPokemon"
-        (statusFavoritoAlterado)="alternarStatusPokemon($event)"
+        (statusFavoritoAlterado)="localStorageService.alternarStatusFavorito($event)"
       ></app-card-pokemon>
     </div>
 
