--- a/src/app/components/listagem-pokemons/listagem-pokemons.html
+++ b/src/app/components/listagem-pokemons/listagem-pokemons.html
@@ -3,7 +3,7 @@
 <hr />
 
 <div class="row justify-content-center g-2 mt-3">
-  @for (pokemon of pokemonsFavoritos; track pokemon.nome) {
+  @for (pokemon of pokemonsFavoritos$ | async; track pokemon.nome) {
     <div class="col-3 col-md-1">
       <a [routerLink]="['/pokemons', pokemon.id]" [title]="pokemon.nome">
         <div class="card border-2 rounded-circle">
@@ -22,7 +22,7 @@
       <app-card-pokemon
         [pokemon]="pokemon"
         [exibirLink]="true"
-        (statusFavoritoAlterado)="alternarStatusPokemon($event)"
+        (statusFavoritoAlterado)="localStorageService.alternarStatusFavorito($event)"
       ></app-card-pokemon>
     </div>
   }
