--- a/src/app/components/listagem-pokemons/listagem-pokemons.html
+++ b/src/app/components/listagem-pokemons/listagem-pokemons.html
@@ -28,11 +28,9 @@
   }
 </div>
 
-<div class="text-center my-3">
-  <div class="d-flex justify-content-center">
-    <button class="btn btn-primary" (click)="carregarMais()" [disabled]="offsetFinalAlcancado">
-      <i class="bi bi-arrow-clockwise my-auto me-2"></i>
-      Carregar mais
-    </button>
-  </div>
+<div class="d-flex justify-content-center my-4">
+  <button class="btn btn-primary" (click)="carregarMais()" [disabled]="paginaFinalAlcancada">
+    <i class="bi bi-arrow-clockwise my-auto me-2"></i>
+    Carregar mais
+  </button>
 </div>
